# jacques

./: .gitignore  callback.py  init.sql  readme.md  run_db.sh  utils.py
_labs/: db.py  readwise.py
auth/: service.py
common/: Makefile  pyproject.toml
common/common/: __init__.py
common/common/health/: base.py  database.py  flask.py
common/common/logging/: config.py  http.py  mixin.py  trace.py
db/: __init__.py  api.py  connection.py
repo/: __init__.py
services/identity-api/: Dockerfile  Makefile  pyproject.toml  readme.md
services/identity-api/app/: main.py
services/identity-api/app/db/: config.py
services/identity-api/app/http/: auth_bp.py
services/identity-api/app/repo/: decks.py  models.py
services/identity-api/app/service/: exceptions.py  user.py
services/identity_api/: Dockerfile  Makefile  pyproject.toml
services/identity_api/app/: factory.py  main.py
services/identity_api/app/db/: executor.py
services/identity_api/app/http/: auth_bp.py  internal_bp.py
services/identity_api/app/repo/: __init__.py  decks.py  exceptions.py  refresh_tokens.py  users.py
services/identity_api/app/service/: exceptions.py  google_oauth_client.py  token.py  (+2 more)
services/indetity-api/app/: callback.py  main.py
services/ingestion_worker/: Makefile  elo.txt
services/ingestion_worker/app/: config.py  main.py  protocols.py
services/prov-api/: pyproject.toml
services/prov-api/app/: main.py  protocols.py
services/prov_api/: Dockerfile  Makefile  makefile  pyproject.toml
services/prov_api/app/: factory.py  main.py
services/provisioning-api/: elo
(+46 files in other folders)
