[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jacques-api"
version = "0.1.0"
description = "Jacques authentication API service"
readme = "readme.md"
requires-python = ">=3.10"

dependencies = [
    "flask>=3.0",
    "gunicorn>=21.2",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "requests>=2.31",
    "google-auth>=2.25",
    "PyJWT>=2.8",
    "python-dotenv>=1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
